# status

./: .envrc  .gitignore  Cargo.toml  LICENSE  build.rs  flake.nix  justfile
src/: assets.rs  logging.rs  main.rs  time.rs  util.rs
