cargo-features = ["codegen-backend"]

[package]
name = "drive"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

repository = "https://github.com/happenslol/drive"
description = "File manager"
readme = "README.md"
authors = ["Hilmar Wiegand <me@hwgnd.de>"]
categories = []
keywords = []

[dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
include-fs = "0.2.0"
anyhow = "1.0.98"
unicode-segmentation = "1.12.0"

[dependencies.gpui]
git = "https://github.com/happenslol/zed"
branch = "dev"
default-features = false
features = ["wayland", "http_client"]

[build-dependencies]
include-fs = "0.2.0"

[profile.dev]
debug = 1
codegen-backend = "cranelift"

[profile.release]
strip = true
lto = true
codegen-units = 1
